Added a box shadow and images.
Aligned the images on the rendered page and added a box shadow to bordered links.

--- a/index.html
+++ b/index.html
@@ -38,35 +38,63 @@
 
     <article>
         <h1>Listing 20481</h1>
+        <br>
         <p>Paradise found! This custom-built brand new home sits proudly on a 6.8-acre
             high wooded site overlooking a 300-acre nature conservancy. The setting is
             exceptional, and the home is every bit as exciting! A bright, open layout is
             enhanced by vaulted ceilings, hardwood and tumbled, ceramic flooring, custom
             maple cabinetry, upgraded fixtures, numerous windows, and incredible views.
         </p>
+        </br>
+        <aside>
 
+            <ul class="secondNav">
+                <li><a href="#">More Details</a></li>
+                <li><a href="#">Map</a></li>
+                <li><a href="#">Request a Showing</a></li>
+                <li><a href="#">Other Listings</a></li>
+            </ul>
+
+        </aside>
+        <br>
         <p>There is much more. The property includes a 40x54 storage building - perfect
             for a large boat and machinery. An exposed walkout on lower level leads down to
             a beautiful wooded area.
         </p>
+        </br>
 
         <p>
             An extra bathroom, bedroom, and family room can be added to the unfinished
             basement for more living space.
         </p>
-    </article>
-    <!-- <aside>
-        <ul class="secondNav">
-            <li><a href="#">More Details</a></li>
-            <li><a href="#">Map</a></li>
-            <li><a href="#">Request a Showing</a></li>
-            <li><a href="#">Other Listings</a></li>
-        </ul>
-    </aside> -->
 
+    </article>
+    <article class="pics">
+        <figcaption id="fig1">Front View</figcaption>
+        <img id="pic1" src="br_photo1.png" alt="Front View" />
+        <figcaption id="fig2">Rear View </figcaption>
+        <img id="pic2" src="br_photo2.png" alt="Rear View" />
+        <figcaption id="fig3">Side View</figcaption>
+        <img id="pic3" src="br_photo3.png" alt="Side View" />
+        <figcaption id="fig4">Dining Room</figcaption>
+        <img id="pic4" src="br_photo4.png" alt="Dining Room" />
+        <figcaption id="fig5">Kitchen</figcaption>
+        <img id="pic5" src="br_photo5.png" alt="Kitchen" />
+        <figcaption id="fig6">Living Room</figcaption>
+        <img id="pic6" src="br_photo6.png" alt="Living Room" />
+        <figcaption id="fig7">Bedroom1</figcaption>
+        <img id="pic7" src="br_photo7.png" alt="Bedroom1" />
+        <figcaption id="fig8">Bedroom2</figcaption>
+        <img id="pic8" src="br_photo8.png" alt="Bedroom2" />
+        <figcaption id="fig9">Bedroom3</figcaption>
+        <img id="pic9" src="br_photo9.png" alt="Bedroom3" />
+    </article>
 
     <footer>
-
+        Address:
+        Listing 2048
+        414 Mandel Road
+        Owatonna, MN 55060
     </footer>
 </body>
 
