Final commit push. Ready for review.
Added final comments.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <article>
-        <h1>Listing 20481</h1>
+        <h1>Listing 20481:</h1>
         <br>
         <p>Paradise found! This custom-built brand new home sits proudly on a 6.8-acre
             high wooded site overlooking a 300-acre nature conservancy. The setting is
@@ -46,6 +46,9 @@
             maple cabinetry, upgraded fixtures, numerous windows, and incredible views.
         </p>
         </br>
+
+
+
         <aside>
 
             <ul class="secondNav">
@@ -70,6 +73,7 @@
 
     </article>
     <article class="pics">
+        <h1>Views:</h1>
         <figcaption id="fig1">Front View</figcaption>
         <img id="pic1" src="br_photo1.png" alt="Front View" />
         <figcaption id="fig2">Rear View </figcaption>
@@ -90,11 +94,15 @@
         <img id="pic9" src="br_photo9.png" alt="Bedroom3" />
     </article>
 
-    <footer>
-        Address:
+    <footer class="listingDes">Address:
         Listing 2048
         414 Mandel Road
         Owatonna, MN 55060
+
+        List Price: $412,800
+        Square Feet: 3,300
+        Bedrooms: 4
+        Baths: 2-1/2
     </footer>
 </body>
 
